--- a/index.css
+++ b/index.css
@@ -76,13 +76,14 @@ h2 {
 }
 
 ul {
-    list-style-type: none;
+    list-style-type: disc;
 }
 
 ul li {
     margin-bottom: 1rem;
     font-size: 1.2rem;
     color: #2C2E43;
+    font-size: 1.5rem;
 }
 
 footer {
