--- a/index.css
+++ b/index.css
@@ -81,9 +81,10 @@ ul {
 
 ul li {
     margin-bottom: 1rem;
-    font-size: 1.2rem;
+    font-size: 1rem;
     color: #2C2E43;
-    font-size: 1.5rem;
+    margin-left: 40px;
+    
 }
 
 footer {
